- Bot now automatically uses curl() for fetching URL's if curl is detected. You can still force it to use Sockets using !settings tools force sockets on.
- Bot now includes bot name and dimension in user agent on HTTP requests.
- !roll should work properly now.
- Improved !raffle logic slightly. Will now determine the number of times to do a roll depending on the number of people in the raffle.

API Changes:
- Moved aochat event handling out of Main.php and in to AOChat.php
- Added signal events to AOChat events
- Added third optional parameter $header (bol TRUE/FALSE) to make_blob displaying VhaBot like terminal header. Shamelessly borrowed from VhaBot. Defaults to TRUE
- Added fourth optional parameter $strip (bol TRUE/FALSE) to chatcmd to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- Added sixth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- chatcmd() now allows / as $origin parameter and will not prefix the chatcmd in any way.
- Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.

+Possible BREAKAGE! - Peliminary testing shows modules appear to be working as expected.
+- Moving from Status array to BotError. This WILL cause breakage until the checks have been converted aswell.
+- Moving uid/uname cache from AOChat to core/PlayerList.php. Calls to core("chat")->get_u* are now depricated and PlayerList does return BotError on failures.
+- rosterupdate seems to output alot of errors todo with failed to get whois (confirmed by luyu)
 
+Known breakage
+- IRC module fails to process commands given in IRC.


-------------
Version 0.6.4
-------------
- Modified the network protocol to work with AoC 1.05
- Reversing stripping of control characters on text from IRC for now.